import java.util.ArrayList;

public class CollectionLab {

    public static ArrayList<Media> movies;

    public static ArrayList<Media> series;
}
