public class Series extends Media {


    public Series(String seriesName, String seriesYear, int episode, int season, double seriesRating) {
        super(seriesName, seriesYear, seriesRating);

    }


    @Override
    public String toString() {
        return super.toString();
    }

}

